--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 	<link rel="stylesheet" href="editor.css">
 
-	<script src="/lib/jquery-3.7.1.min.js"></script> <!-- Uses non-.slim animation with the copy button's message -->
-	<script src="/lib/FileSaver-2.0.5.min.js"></script>
-	<script src="/lib/base64.js"></script>
+	<script src="lib/jquery-3.7.1.min.js"></script> <!-- Uses non-.slim animation with the copy button's message -->
+	<script src="lib/FileSaver-2.0.5.min.js"></script>
+	<script src="lib/base64.js"></script>
 	<script src="savelib.js"></script>
 </head>
 <body>
@@ -422,8 +422,8 @@
 			<div id="customizerBlock">
 				<h2>Customize Your Clones</h2>
 				<div id="customizerAssetsBlock" class="hidden">
-					<img id="customizerAssetYou" src="/img/you.png" alt="">
-					<img id="customizerAssetYouAddons" src="/img/youAddons.png" alt="">
+					<img id="customizerAssetYou" src="img/you.png" alt="">
+					<img id="customizerAssetYouAddons" src="img/youAddons.png" alt="">
 					<canvas id="customizerRender" width="64" height="64"></canvas>
 				</div>
 				<div id="customizerPreviewBlock">
